Сверстан первый блок, за исключением кнопок соцсетей

--- a/index.html
+++ b/index.html
@@ -5,9 +5,38 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Title</title>
+    <title>Йога-туры в Индию</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+<!--    <link rel="stylesheet" href="css/owl.carousel.min.css">-->
+<!--    <link rel="stylesheet" href="css/owl.theme.default.min.css">-->
+<!--    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">-->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="block-1">
+        <div class="header">
+            <div class="logo-header">
+                <img src="image/logo-header.png" alt="">
+            </div>
+            <div class="telefon-info">
+                <div class="info-text">бесплатный звонок по России</div>
+                <div class="info-telefon">8 (800) 505-35-87</div>
+            </div>
+        </div>
+        <div class="info">
+            <div class="title">Йога-туры в Индию</div>
+            <div class="list-services">океан / йога / путешествия / аюрведа</div>
+            <div class="mesto">Индия, штат Керала, побережье океана</div>
+            <button class="btn-requst">Подать заявку</button>
+        </div>
+    </div>
+
+
+
+
+
+
 
 </body>
 </html>
