Завершена верстка первого блока

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
             <div class="list-services">океан / йога / путешествия / аюрведа</div>
             <div class="mesto">Индия, штат Керала, побережье океана</div>
             <button class="btn-requst">Подать заявку</button>
+            <div class="social">
+                <div class="social-item"><img src="image/vkontakte.png" alt="vkontakte"></div>
+                <div class="social-item"><img src="image/facebook.png" alt="facebook"></div>
+                <div class="social-item"><img src="image/instagram.png" alt="instagram"></div>
+            </div>
         </div>
     </div>
 
