Завершена верстка второго блока

--- a/index.html
+++ b/index.html
@@ -36,7 +36,27 @@
             </div>
         </div>
     </div>
-
+    <div class="block-2">
+        <div class="image_bl2"><img src="image/women-2block.png" alt="women"></div>
+        <div class="info-bl2">
+            <div class="title-bl2">Что такое<br><span>йога-тур?</span></div>
+            <p>Йога-тур – это новый вид туризма, когда с путешествием в другую страну сочетаются занятия по йоге.
+                Вы отдыхаете на море, посещаете интересные места, несколько раз в день занимаетесь йогой и
+                проводите отпуск в интересной компании. Теперь отдых стал интересным и полезным для тела и души.</p>
+            <div class="icon-inf">
+                <div class="icon"><img src="image/Yoga_Mat-2block.png" alt="yoga-mat"></div>
+                <div class="inf">йога</div>
+            </div>
+            <div class="icon-inf">
+                <div class="icon"><img src="image/waves-2block.png" alt="waves"></div>
+                <div class="inf">море</div>
+            </div>
+            <div class="icon-inf">
+                <div class="icon"><img src="image/paper-plane-2block.png" alt="paper-plane"></div>
+                <div class="inf">путешествие</div>
+            </div>
+        </div>
+    </div>
 
 
 
