Завершена верстка третьего блока

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
 <!--    <link rel="stylesheet" href="css/owl.carousel.min.css">-->
 <!--    <link rel="stylesheet" href="css/owl.theme.default.min.css">-->
-<!--    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">-->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="block-1">
@@ -57,11 +56,32 @@
             </div>
         </div>
     </div>
-
-
-
-
-
+    <div class="block-3">
+        <div class="title-bl3">5 причин поехать в йога-тур</div>
+        <img src="image/zigzag.png" alt="zigzag">
+        <div class="cards-h">
+            <div class="card-h">
+                <img src="image/1row1img-3block.png" alt="">
+                <p>Провести отпуск нестандартно и интересно</p>
+            </div>
+            <div class="card-h">
+                <img src="image/1row2img-3block.png" alt="">
+                <p>Погрузиться в культуру<br>Индии узнать страну изнутри</p>
+            </div>
+            <div class="card-h">
+                <img src="image/1row3img-3block.png" alt="">
+                <p>Улучшить здоровье<br><br></p>
+            </div>
+            <div class="card-h">
+                <img src="image/2row1img-3block.png" alt="">
+                <p>Избавиться от стрессов и «перезагрузиться»</p>
+            </div>
+            <div class="card-h">
+                <img src="image/2row2img-3block.png" alt="">
+                <p>Отдохнуть в хорошей компании, найти единомышленников</p>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
