--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
     <title>Йога-туры в Индию</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-<!--    <link rel="stylesheet" href="css/owl.carousel.min.css">-->
-<!--    <link rel="stylesheet" href="css/owl.theme.default.min.css">-->
-
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
 </head>
 <body>
     <div class="block-1">
         <div class="header">
             <div class="logo-header">
-                <img src="image/logo-header.png" alt="">
+                <img src="images/logo-header.png" alt="">
             </div>
             <div class="telefon-info">
                 <div class="info-text">бесплатный звонок по России</div>
@@ -29,59 +28,147 @@
             <div class="mesto">Индия, штат Керала, побережье океана</div>
             <button class="btn-requst">Подать заявку</button>
             <div class="social">
-                <div class="social-item"><img src="image/vkontakte.png" alt="vkontakte"></div>
-                <div class="social-item"><img src="image/facebook.png" alt="facebook"></div>
-                <div class="social-item"><img src="image/instagram.png" alt="instagram"></div>
+                <div class="social-item"><img src="images/vkontakte.png" alt="vkontakte"></div>
+                <div class="social-item"><img src="images/facebook.png" alt="facebook"></div>
+                <div class="social-item"><img src="images/instagram.png" alt="instagram"></div>
             </div>
         </div>
     </div>
     <div class="block-2">
-        <div class="image_bl2"><img src="image/women-2block.png" alt="women"></div>
+        <div class="image_bl2"><img src="images/women-2block.png" alt="women"></div>
         <div class="info-bl2">
             <div class="title-bl2">Что такое<br><span>йога-тур?</span></div>
             <p>Йога-тур – это новый вид туризма, когда с путешествием в другую страну сочетаются занятия по йоге.
                 Вы отдыхаете на море, посещаете интересные места, несколько раз в день занимаетесь йогой и
                 проводите отпуск в интересной компании. Теперь отдых стал интересным и полезным для тела и души.</p>
             <div class="icon-inf">
-                <div class="icon"><img src="image/Yoga_Mat-2block.png" alt="yoga-mat"></div>
+                <div class="icon"><img src="images/Yoga_Mat-2block.png" alt="yoga-mat"></div>
                 <div class="inf">йога</div>
             </div>
             <div class="icon-inf">
-                <div class="icon"><img src="image/waves-2block.png" alt="waves"></div>
+                <div class="icon"><img src="images/waves-2block.png" alt="waves"></div>
                 <div class="inf">море</div>
             </div>
             <div class="icon-inf">
-                <div class="icon"><img src="image/paper-plane-2block.png" alt="paper-plane"></div>
+                <div class="icon"><img src="images/paper-plane-2block.png" alt="paper-plane"></div>
                 <div class="inf">путешествие</div>
             </div>
         </div>
     </div>
     <div class="block-3">
         <div class="title-bl3">5 причин поехать в йога-тур</div>
-        <img src="image/zigzag.png" alt="zigzag">
+        <img src="images/zigzag.png" alt="zigzag">
         <div class="cards-h">
             <div class="card-h">
-                <img src="image/1row1img-3block.png" alt="">
+                <img src="images/1row1img-3block.png" alt="">
                 <p>Провести отпуск нестандартно и интересно</p>
             </div>
             <div class="card-h">
-                <img src="image/1row2img-3block.png" alt="">
+                <img src="images/1row2img-3block.png" alt="">
                 <p>Погрузиться в культуру<br>Индии узнать страну изнутри</p>
             </div>
             <div class="card-h">
-                <img src="image/1row3img-3block.png" alt="">
+                <img src="images/1row3img-3block.png" alt="">
                 <p>Улучшить здоровье<br><br></p>
             </div>
             <div class="card-h">
-                <img src="image/2row1img-3block.png" alt="">
+                <img src="images/2row1img-3block.png" alt="">
                 <p>Избавиться от стрессов и «перезагрузиться»</p>
             </div>
             <div class="card-h">
-                <img src="image/2row2img-3block.png" alt="">
+                <img src="images/2row2img-3block.png" alt="">
                 <p>Отдохнуть в хорошей компании, найти единомышленников</p>
             </div>
         </div>
     </div>
+    <div class="block-4">
+        <div class="title-bl4">Что меня ждет в путешествии?</div>
+        <img src="images/zigzag.png" alt="zigzag">
+        <div class="owl-carousel owl-theme slider">
+            <div class="cont">
+                <div class="box">
+                    <div class="title-slide">аюрведическое лечение</div>
+                    <p>Всем, кто практикует йогу, рано или поздно захочется побывать в
+                       Индии - в далекой и загадочной стране, где и родилась эта наука о теле и душе.</p>
+                </div>
+                <div class="item pics"><img src="images\img1-4block.png"  height="530" alt=""></div>
+            </div>
+            <div class="cont">
+                <div class="box">
+                    <div class="title-slide">аюрведическое лечение</div>
+                    <p>Всем, кто практикует йогу, рано или поздно захочется побывать в Индии - в далекой
+                       и загадочной стране, где и родилась эта наука о теле и душе.</p>
+                </div>
+                <div class="item pics"><img src="images\img2-4block.png"  height="530" alt=""></div>
+            </div>
+            <div class="cont">
+                <div class="box">
+                    <div class="title-slide">аюрведическое лечение</div>
+                    <p>Всем, кто практикует йогу, рано или поздно захочется побывать в Индии - в далекой
+                       и загадочной стране, где и родилась эта наука о теле и душе.</p>
+                </div>
+                <div class="item pics"><img src="images\img3-4block.png"  height="530" alt=""></div>
+            </div>
+        </div>
+    </div>
+    <div class="block-5">
+        <div class="title-bl5">Расписание йога-туров</div>
+        <img src="images/zigzag.png" alt="zigzag">
+        <div class="cards-tour">
+            <div class="card-tour">
+                <div class="date-event">5-18 октября</div>
+                <div class="theme-event">"Снижение веса"</div>
+                <div class="link-more"><a href="#">Читать подробнее</a></div>
+                <button class="btn-requst-sm">оставить заявку</button>
+            </div>
+            <div class="card-tour">
+                <div class="date-event">5-18 октября</div>
+                <div class="theme-event">"Снижение веса"</div>
+                <div class="link-more"><a href="#">Читать подробнее</a></div>
+                <button class="btn-requst-sm">оставить заявку</button>
+            </div>
+            <div class="card-tour">
+                <div class="date-event">5-18 октября</div>
+                <div class="theme-event">"Снижение веса"</div>
+                <div class="link-more"><a href="#">Читать подробнее</a></div>
+                <button class="btn-requst-sm">оставить заявку</button>
+            </div>
+            <div class="card-tour">
+                <div class="date-event">5-18 октября</div>
+                <div class="theme-event">"Снижение веса"</div>
+                <div class="link-more"><a href="#">Читать подробнее</a></div>
+                <button class="btn-requst-sm">оставить заявку</button>
+            </div>
+            <div class="card-tour">
+                <div class="date-event">5-18 октября</div>
+                <div class="theme-event">"Снижение веса"</div>
+                <div class="link-more"><a href="#">Читать подробнее</a></div>
+                <button class="btn-requst-sm">оставить заявку</button>
+            </div>
+            <div class="card-tour">
+                <div class="date-event">5-18 октября</div>
+                <div class="theme-event">"Снижение веса"</div>
+                <div class="link-more"><a href="#">Читать подробнее</a></div>
+                <button class="btn-requst-sm">оставить заявку</button>
+            </div>
+            <div class="card-tour">
+                <div class="date-event">5-18 октября</div>
+                <div class="theme-event">"Снижение веса"</div>
+                <div class="link-more"><a href="#">Читать подробнее</a></div>
+                <button class="btn-requst-sm">оставить заявку</button>
+            </div>
+            <div class="card-tour">
+                <div class="date-event">5-18 октября</div>
+                <div class="theme-event">"Снижение веса"</div>
+                <div class="link-more"><a href="#">Читать подробнее</a></div>
+                <button class="btn-requst-sm">оставить заявку</button>
+            </div>
+        </div>
+    </div>
 
+
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
