--- a/index.html
+++ b/index.html
@@ -165,6 +165,76 @@
             </div>
         </div>
     </div>
+    <div class="block-6">
+        <div class="title-bl6">Программа</div>
+        <img src="images/zigzag.png" alt="zigzag">
+        <div class="owl-carousel owl-theme slider">
+            <div class="cont">
+                <div class="box">
+                    <div class="title-slide">1 день</div>
+                    <p>Прилет в Тривандрум, трансфер до йога-центра, знакомство, обзорная прогулка по Варкале,
+                        индивидуальная консультация врача-аюрведиста.</p>
+                </div>
+                <div class="item pics"><img src="images\img2-6block.png"  height="530" alt=""></div>
+            </div>
+            <div class="cont">
+                <div class="box">
+                    <div class="title-slide">2 день</div>
+                    <p>Прилет в Тривандрум, трансфер до йога-центра, знакомство, обзорная прогулка по Варкале,
+                        индивидуальная консультация врача-аюрведиста.</p>
+                </div>
+                <div class="item pics"><img src="images\img1-6block.png"  height="530" alt=""></div>
+            </div>
+            <div class="cont">
+                <div class="box">
+                    <div class="title-slide">3 день</div>
+                    <p>Прилет в Тривандрум, трансфер до йога-центра, знакомство, обзорная прогулка по Варкале,
+                        индивидуальная консультация врача-аюрведиста.</p>
+                </div>
+                <div class="item pics"><img src="images\img3-6block.png"  height="530" alt=""></div>
+            </div>
+        </div>
+    </div>
+    <div class="block-7">
+        <div class="inf-block-7">
+            <div class="title-bl7">Что такое аюрведа?</div>
+            <img src="images/zigzag.png" alt="zigzag">
+            <p>Аюрведа - это древнейшая медицинская наука в мире, колоссальная технология восстановления сил, красоты
+                и здоровья. Она зародилась на юге Индии 5000 лет назад и сейчас широко распространилась по миру. <br><br>
+                Аюрведа в последнее время стремительно набирает популярность в России и во всем мире.
+                Аюрведа лечит весь организм в целом, восстанавливает нарушенный баланс между его частями, удаляя саму
+                причину болезни. Цель аюрведического метода лечения - укрепление иммунной системы организма, профилактика
+                и лечение заболеваний с помощью натуральных лекарств, не имеющих побочных эффектов.
+            </p>
+            <div class="sub-title-bl7">Программа аюрведы на 5 дней, 7 дней или 12 дней:</div>
+        </div>
+        <div class="cards-list">
+            <div class="card-list">
+                <img src="images/img1-7block.png" alt="">
+                <p>индивидуальная консультация врача-аювредиста с переводом на русский язык,индивидуальное
+                    наблюдение за курсом лечения врачом-аюрведистом</p>
+            </div>
+            <div class="card-list">
+                <img src="images/img2-7block.png" alt="">
+                <p>масляный массаж всего тела ежедневно (60 минут) в 2 руки или в 4 руки</p>
+            </div>
+            <div class="card-list">
+                <img src="images/img3-7block.png" alt="">
+                <p>две аюрведические процедуры ежедневно по Вашему индивидуальному курсу лечения</p>
+            </div>
+            <div class="card-list">
+                <img src="images/img4-7block.png" alt="">
+                <p>все медицинские препараты и масла в ходе процедур, одежда для процедур
+                </p>
+            </div>
+            <div class="card-list">
+                <img src="images/img5-7block.png" alt="">
+                <p>итоговая консультация врача-аюрведиста с планом продолжения приема препаратов дома,
+                    рекомендаций по диете</p>
+            </div>
+        </div>
+    </div>
+
 
 
     <script src="js/jquery-3.5.1.min.js"></script>
