Завершена верстка восьмого и 60% девятого блока

--- a/index.html
+++ b/index.html
@@ -234,7 +234,117 @@
             </div>
         </div>
     </div>
-
+    <div class="overlay-bl8"></div>
+    <div class="block-8">
+        <div class="gallery-bl8">
+            <img src="images/img1-8block.png" alt="" class="image-bl8">
+            <img src="images/img2-8block.png" alt="" class="image-bl8">
+            <img src="images/img3-8block.png" alt="" class="image-bl8">
+            <img src="images/img4-8block.png" alt="" class="image-bl8">
+            <img src="images/img5-8block.png" alt="" class="image-bl8">
+            <img src="images/img6-8block.png" alt="" class="image-bl8">
+            <img src="images/img7-8block.png" alt="" class="image-bl8">
+            <img src="images/img8-8block.png" alt="" class="image-bl8">
+            <img src="images/img9-8block.png" alt="" class="image-bl8">
+            <img src="images/img10-8block.png" alt="" class="image-bl8">
+            <img src="images/img11-8block.png" alt="" class="image-bl8">
+            <img src="images/img12-8block.png" alt="" class="image-bl8">
+        </div>
+        <div class="right-bl8">
+            <div class="info-bl8">
+                <div class="title-bl8">Аюрведический центр</div>
+                <div class="sub-title-bl8">Индия, штат Керала, город Варкала</div>
+                <p>Мы будем жить не просто в отеле, а в специализированном аюрведическом центре «Алисера».
+                    Здесь все проходят лечение или занимаются йогой – это тихое и закрытое для посторонних
+                    отдыхающих людей местечко.<br><br> Центр находится на первой пляжной линии в зеленом и спокойном месте,
+                    поодаль от шумных баров и магазинов.<br><br> Этот аюрведический центр уже 5 лет администрируют русские
+                    специалисты - это значит, что они стараются обеспечить сервис на уровне, привычном русскому
+                    туристу. Вас не шокирует грязь и антисанитария Индии, которой многие боятся, не будет
+                    недопониманий с персоналом, еда будет адаптирована для привычного вкуса русского туриста и т.д.
+                    В центре постоянно есть переводчик с английского на русский язык. Отдыхают здесь в основном
+                    гости из России – поэтому всегда можно найти интересное общение, если вы приехали один или
+                    маленькой компанией.
+                </p>
+            </div>
+            <div class="list-bl8">
+                <div class="item-list">
+                    <img src="images/logo-8block.png" class="icon-bl8">
+                    <p>комнаты категории «стандарт» и «повышенной комфортности» с санузлом и горячей водой</p>
+                </div>
+                <div class="item-list">
+                    <img src="images/logo-8block.png" class="icon-bl8">
+                    <p>собственная территория с пальмами, гамаками и зонами для отдыха</p>
+                </div>
+                <div class="item-list">
+                    <img src="images/logo-8block.png" class="icon-bl8">
+                    <p>бассейн</p>
+                </div>
+                <div class="item-list">
+                    <img src="images/logo-8block.png" class="icon-bl8">
+                    <p>крытый зал для йоги</p>
+                </div>
+                <div class="item-list">
+                    <img src="images/logo-8block.png" class="icon-bl8">
+                    <p>вегетарианское аюрведическое кафе</p>
+                </div>
+                <div class="item-list">
+                    <img src="images/logo-8block.png" class="icon-bl8">
+                    <p>аюрведические кабинеты</p>
+                </div>
+                <div class="item-list">
+                    <img src="images/logo-8block.png" class="icon-bl8">
+                    <p>собственный пляж</p>
+                </div>
+                <div class="item-list">
+                    <img src="images/logo-8block.png" class="icon-bl8">
+                    <p>Wi-Fi на всей территории бесплатно</p>
+                </div>
+                <div class="item-list">
+                    <img src="images/logo-8block.png" class="icon-bl8">
+                    <p>русскоговорящий администратор</p>
+                </div>
+                <div class="item-list">
+                    <img src="images/logo-8block.png" class="icon-bl8">
+                    <p>туристический офис - билеты, экскурсии и т.д.</p>
+                </div>
+                <div class="item-list">
+                    <img src="images/logo-8block.png" class="icon-bl8">
+                    <p>круглосуточно врач</p>
+                </div>
+                <div class="item-list">
+                    <img src="images/logo-8block.png" class="icon-bl8">
+                    <p>аренда скутеров</p>
+                </div>
+                <div class="item-list">
+                    <img src="images/logo-8block.png" class="icon-bl8">
+                    <p>заказ такси</p>
+                </div>
+                <div class="item-list">
+                    <img src="images/logo-8block.png" class="icon-bl8">
+                    <p>сейф</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="overlay-bl9"></div>
+    <div class="block-9">
+        <div class="title-bl9">Инструкторы</div>
+        <img src="images/zigzag.png" alt="zigzag" class="zig">
+        <div class="instructor">
+            <img src="images/img1-9block.png" class="image-bl9" alt="">
+            <div class="instr-box">
+                <div class="name-instr">Юлия Ухваткина</div>
+                <p></p>
+            </div>
+        </div>
+        <div class="instructor">
+            <img src="images/img2-9block.png" class="image-bl9" alt="">
+            <div class="instr-box">
+                <div class="name-instr">Сэм Джон</div>
+                <p></p>
+            </div>
+        </div>
+    </div>
 
 
     <script src="js/jquery-3.5.1.min.js"></script>
