Завершена верстка девятого блока

--- a/index.html
+++ b/index.html
@@ -333,19 +333,27 @@
         <div class="instructor">
             <img src="images/img1-9block.png" class="image-bl9" alt="">
             <div class="instr-box">
-                <div class="name-instr">Юлия Ухваткина</div>
-                <p></p>
+                <div class="name-instr">Юлия Ухваткина<span class="sis">Хатха-йога <br> Шри-шри йога</span></div>
+                <div class="separator"></div>
+                <p>Международный индийский сертификат учителя йоги: VED VIGNAN MAHA VIDYA PEETH.<br>
+                   Ежегодно проходит курсы повышения квалификации в России и в Индии.<br>
+                   Переводчик с английского языка
+                </p>
             </div>
         </div>
         <div class="instructor">
             <img src="images/img2-9block.png" class="image-bl9" alt="">
             <div class="instr-box">
-                <div class="name-instr">Сэм Джон</div>
-                <p></p>
+                <div class="name-instr">Сэм Джон<span class="sis">Индия. Шри-шри йога.<br>Курс «Счастье»</span></div>
+                <div class="separator"></div>
+                <p>Более 10 лет ведет тренинги по йоге по всей Индии.<br>
+                    С 2009-го года преподаватель йоги международного фонда Art of living.<br>
+                    Обучает пранаяме, дыхательным техникам и медитации.<br>
+                    Читает лекции о теории и философии йоги.
+                </p>
             </div>
         </div>
     </div>
-
 
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
