Закончена верстка десятого блока

--- a/index.html
+++ b/index.html
@@ -354,6 +354,67 @@
             </div>
         </div>
     </div>
+    <div class="block-10">
+        <div class="title-bl10">Отзывы участников</div>
+        <img src="images/zigzag.png" alt="zigzag">
+
+        <div class="owl-carousel owl-theme slider" id="slider">
+
+<!--        <div class="cards-testimonials">-->
+<!--            <svg width="60px" height="60px" viewBox="0 0 50 80" xml:space="preserve"> <polyline fill="none" stroke="#000000" stroke-width="2"-->
+<!--                stroke-linecap="round" stroke-linejoin="round" points=" 45.63,75.8 0.375,38.087 45.63,0.375 "/> </svg>-->
+            <div class="card-testimonial">
+                <img src="images\img1-10block.png" class="image-bl10" alt="">
+                <div class="info-testimonial">
+                    <div class="title-testimonial">Дмитрий <span class="bold-title">Жигарев</span></div>
+                    <a href="vk.com/zhigarev_dmitrii">vk.com/zhigarev_dmitrii</a>
+                    <p>Мне, как всегда в этой жизни везет на встречи с интересными людьми.
+                        Было очень приятно попасть в такую хорошую компанию искренних,
+                        позитивных и интересных людей. Индия классная страна… интересно
+                        было соприкоснуться с такой культурой. Иногда она шокирует,
+                        иногда вызывают улыбку и удивление, но я пожелал бы каждому побывать
+                        в этой экстраординарной стране. Я отдохнул и душой и телом.
+                        Постараюсь приехать туда еще не раз…</p>
+                </div>
+            </div>
+
+            <div class="card-testimonial">
+                <img src="images\img1-10block.png" class="image-bl10" alt="">
+                <div class="info-testimonial">
+                    <div class="title-testimonial">Дмитрий Жигарев</div>
+                    <a href="vk.com/zhigarev_dmitrii">vk.com/zhigarev_dmitrii</a>
+                    <p>Мне, как всегда в этой жизни везет на встречи с интересными людьми.
+                        Было очень приятно попасть в такую хорошую компанию искренних,
+                        позитивных и интересных людей. Индия классная страна… интересно
+                        было соприкоснуться с такой культурой. Иногда она шокирует,
+                        иногда вызывают улыбку и удивление, но я пожелал бы каждому побывать
+                        в этой экстраординарной стране. Я отдохнул и душой и телом.
+                        Постараюсь приехать туда еще не раз…</p>
+                </div>
+            </div>
+
+<!--            <div class="card-testimonial">-->
+<!--                <img src="images\img1-10block.png" class="image-bl10" alt="">-->
+<!--                <div class="info-testimonial">-->
+<!--                    <div class="title-testimonial">Дмитрий Жигарев</div>-->
+<!--                    <a href="vk.com/zhigarev_dmitrii">vk.com/zhigarev_dmitrii</a>-->
+<!--                    <p>Мне, как всегда в этой жизни везет на встречи с интересными людьми.-->
+<!--                        Было очень приятно попасть в такую хорошую компанию искренних,-->
+<!--                        позитивных и интересных людей. Индия классная страна… интересно-->
+<!--                        было соприкоснуться с такой культурой. Иногда она шокирует,-->
+<!--                        иногда вызывают улыбку и удивление, но я пожелал бы каждому побывать-->
+<!--                        в этой экстраординарной стране. Я отдохнул и душой и телом.-->
+<!--                        Постараюсь приехать туда еще не раз…</p>-->
+<!--                </div>-->
+<!--            </div>-->
+
+<!--           </div>-->
+
+        </div>
+    </div>
+
+
+
 
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
