Закончена верстка одинадцатого и двенадцатого блока

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="block-4">
         <div class="title-bl4">Что меня ждет в путешествии?</div>
         <img src="images/zigzag.png" alt="zigzag">
-        <div class="owl-carousel owl-theme slider">
+        <div id="slider00" class="owl-carousel owl-theme slider">
             <div class="cont">
                 <div class="box">
                     <div class="title-slide">аюрведическое лечение</div>
@@ -168,7 +168,7 @@
     <div class="block-6">
         <div class="title-bl6">Программа</div>
         <img src="images/zigzag.png" alt="zigzag">
-        <div class="owl-carousel owl-theme slider">
+        <div id="slider01" class="owl-carousel owl-theme slider">
             <div class="cont">
                 <div class="box">
                     <div class="title-slide">1 день</div>
@@ -356,13 +356,9 @@
     </div>
     <div class="block-10">
         <div class="title-bl10">Отзывы участников</div>
-        <img src="images/zigzag.png" alt="zigzag">
+        <img src="images/zigzag.png" alt="zigzag" class="zig10">
 
-        <div class="owl-carousel owl-theme slider" id="slider">
-
-<!--        <div class="cards-testimonials">-->
-<!--            <svg width="60px" height="60px" viewBox="0 0 50 80" xml:space="preserve"> <polyline fill="none" stroke="#000000" stroke-width="2"-->
-<!--                stroke-linecap="round" stroke-linejoin="round" points=" 45.63,75.8 0.375,38.087 45.63,0.375 "/> </svg>-->
+        <div id="slider02" class="owl-carousel owl-theme slider2">
             <div class="card-testimonial">
                 <img src="images\img1-10block.png" class="image-bl10" alt="">
                 <div class="info-testimonial">
@@ -377,7 +373,6 @@
                         Постараюсь приехать туда еще не раз…</p>
                 </div>
             </div>
-
             <div class="card-testimonial">
                 <img src="images\img1-10block.png" class="image-bl10" alt="">
                 <div class="info-testimonial">
@@ -392,27 +387,96 @@
                         Постараюсь приехать туда еще не раз…</p>
                 </div>
             </div>
-
-<!--            <div class="card-testimonial">-->
-<!--                <img src="images\img1-10block.png" class="image-bl10" alt="">-->
-<!--                <div class="info-testimonial">-->
-<!--                    <div class="title-testimonial">Дмитрий Жигарев</div>-->
-<!--                    <a href="vk.com/zhigarev_dmitrii">vk.com/zhigarev_dmitrii</a>-->
-<!--                    <p>Мне, как всегда в этой жизни везет на встречи с интересными людьми.-->
-<!--                        Было очень приятно попасть в такую хорошую компанию искренних,-->
-<!--                        позитивных и интересных людей. Индия классная страна… интересно-->
-<!--                        было соприкоснуться с такой культурой. Иногда она шокирует,-->
-<!--                        иногда вызывают улыбку и удивление, но я пожелал бы каждому побывать-->
-<!--                        в этой экстраординарной стране. Я отдохнул и душой и телом.-->
-<!--                        Постараюсь приехать туда еще не раз…</p>-->
-<!--                </div>-->
-<!--            </div>-->
-
-<!--           </div>-->
-
+            <div class="card-testimonial">
+                <img src="images\img1-10block.png" class="image-bl10" alt="">
+                <div class="info-testimonial">
+                    <div class="title-testimonial">Дмитрий Жигарев</div>
+                    <a href="vk.com/zhigarev_dmitrii">vk.com/zhigarev_dmitrii</a>
+                    <p>Мне, как всегда в этой жизни везет на встречи с интересными людьми.
+                        Было очень приятно попасть в такую хорошую компанию искренних,
+                        позитивных и интересных людей. Индия классная страна… интересно
+                        было соприкоснуться с такой культурой. Иногда она шокирует,
+                        иногда вызывают улыбку и удивление, но я пожелал бы каждому побывать
+                        в этой экстраординарной стране. Я отдохнул и душой и телом.
+                        Постараюсь приехать туда еще не раз…</p>
+                </div>
+            </div>
         </div>
     </div>
-
+    <div class="overlay-bl11"></div>
+    <div class="block-11">
+        <div class="title-bl11">Почему 1620 туристов выбрали нас</div>
+        <img src="images/zigzag.png" alt="" class="zig11">
+        <div class="cards-v">
+            <div class="card-v">
+                <img src="images/img1-11block.png" class="image-bl11" alt="">
+                <div class="title-card-v">Опыт</div>
+                <p>За 5 лет работы мы открыли мир йоги для более чем 1620 туристов</p>
+            </div>
+            <div class="card-v">
+                <img src="images/img2-11block.png" class="image-bl11" alt="">
+                <div class="title-card-v">С нами спокойно</div>
+                <p>Русскоговорящее сопровождение – инструктор и переводчик будет с вами в течении всего тура</p>
+            </div>
+            <div class="card-v">
+                <img src="images/img3-11block.png" class="image-bl11" alt="">
+                <div class="title-card-v">Мы — профессионалы</div>
+                <p>Мы — самая большая компания в России, которая занимается исключительно йога-турами<br><br></p>
+            </div>
+            <div class="card-v">
+                <img src="images/img4-11block.png" class="image-bl11" alt="">
+                <div class="title-card-v">С нами выгодно</div>
+                <p>Наш принцип – делать цены на йога-туры доступными для всех</p>
+            </div>
+            <div class="card-v">
+                <img src="images/img5-11block.png" class="image-bl11" alt="">
+                <div class="title-card-v">С нами безопасно</div>
+                <p>Вы получаете весь пакет официальных туристических документов</p>
+            </div>
+            <div class="card-v">
+                <img src="images/img6-11block.png" class="image-bl11" alt="">
+                <div class="title-card-v">С нами удобно</div>
+                <p>Мы поможем забронировать авиа-билеты и оформить визу</p>
+            </div>
+        </div>
+    </div>
+    <div class="block-12">
+        <div class="title-bl12">Как мы работаем</div>
+        <img src="images/zigzag.png" alt="" class="zig12">
+        <div class="sub-title-bl12">Возможно оформление йога-тура дистанционно из любого города</div>
+        <div class="cards-v2">
+            <div class="card-v2">
+                <img src="images/img1-12block.png" class="image-bl12" alt="">
+                <p>Вы оставляете заявку</p>
+                <a href="#">Отправить заявку</a>
+            </div>
+            <img class="sss" src="images/right-arrow.png" alt="">
+            <div class="card-v2">
+                <img src="images/img2-12block.png" class="image-bl12" alt="">
+                <p>Мы связываемся с вами</p>
+            </div>
+            <img class="sss" src="images/right-arrow.png" alt="">
+            <div class="card-v2">
+                <img src="images/img3-12block.png" class="image-bl12" alt="">
+                <p>Подписываем договор и оформляем документы</p>
+            </div>
+            <img class="sss" src="images/right-arrow.png" alt="">
+            <div class="card-v2">
+                <img src="images/img4-12block.png" class="image-bl12" alt="">
+                <p>Вы оплачиваете аванс 6 000 рублей в банке</p>
+            </div>
+            <img class="sss" src="images/right-arrow.png" alt="">
+            <div class="card-v2">
+                <img src="images/img5-12block.png" class="image-bl12" alt="">
+                <p>Покупаете билеты и оформляете визу (возможно через нас)</p>
+            </div>
+            <img class="sss" src="images/right-arrow.png" alt="">
+            <div class="card-v2">
+                <img src="images/img6-12block.png" class="image-bl12" alt="">
+                <p>Вас встречают в аэропорту Тривандрум с табличкой</p>
+            </div>
+        </div>
+    </div>
 
 
 
