Начата верстка тринадцатого блока

--- a/index.html
+++ b/index.html
@@ -477,7 +477,10 @@
             </div>
         </div>
     </div>
-
+    <div class="block-13">
+        <div class="title-bl13">Как мы работаем</div>
+        <img src="images/zigzag.png" alt="" class="zig13">
+    </div>
 
 
     <script src="js/jquery-3.5.1.min.js"></script>
