Начата верстка тринадцатого блока 2

--- a/index.html
+++ b/index.html
@@ -479,6 +479,7 @@
     </div>
     <div class="block-13">
         <div class="title-bl13">Как мы работаем</div>
+        <div class="title-bl13">Как мы работаем</div>
         <img src="images/zigzag.png" alt="" class="zig13">
     </div>
 
