--- a/index.html
+++ b/index.html
@@ -478,8 +478,7 @@
         </div>
     </div>
     <div class="block-13">
-        <div class="title-bl13">Как мы работаем</div>
-        <div class="title-bl13">Как мы работаем</div>
+        <div class="title-bl13">Стоимость</div>
         <img src="images/zigzag.png" alt="" class="zig13">
     </div>
 
